# evaluation

./: .env.example  .gitignore  01_walkthrough.ipynb  README.md  classifier.py  cli.py  config.py  custom_evaluators.py  dataset.py  detector.py  failure.py  graph.py  llm_judge.py  models.py  pyproject.toml  rewriter.py  run_eval.py  schemas.py  seed_examples.json  tracing.py
